# Predicting-Transmembrane-Protein-Topology-From-3D-Structure

./: README.md
egnn/: Makefile  requirements.txt
egnn/.github/: ._workflows
egnn/config/: main.yaml
egnn/docs/: mkdocs.yaml
egnn/models/: egnnmodel.py
gcpnet/: pyproject.toml
gcpnet/config/: main.yaml
gcpnet/config/labels/: label.yaml
gcpnet/config/models/: ._gcpnet.yaml  gcpnet.yaml
gcpnet/config/train/: ._train.yaml  train.yaml
gcpnet/docs/: mkdocs.yaml
gcpnet/docs/source/: index.md
gcpnet/list/: pyvenv.cfg
gcpnet/models/: gcp.py  gcpnet.py
gcpnet/models/base/: ._constants.py  ._radial.py  ._utils.py  constants.py
gcpnet/models/final_model/: ._CVsetup1_model_major_voting_size1_epoch50.pth
gcpnet/scripts/: metrics_utils.py  test_models.py  train_models.py
gcpnet/scripts/outputs/2024-01-09/22-54-55/.hydra/: hydra.yaml
notebook/: Predicting transmembrance protein topology from 3D structure.ipynb
schnet/: Makefile  pyproject.toml  requirements.txt
schnet/.github/: ._workflows
schnet/.github/workflows/: ._.gitkeep
schnet/data/: make_dataset.py
schnet/data/raw/: DeepTMHMM.3line  DeepTMHMM.partitions.json
schnet/docs/: mkdocs.yaml
schnet/docs/source/: ._.gitkeep  ._index.md  index.md
schnet/models/final_model/CA/: ._CA_CVsetup1_loss_results_Gauss.csv  ._CA_CVsetup1_node_acc_results_Gauss.csv  ._CVsetup1_CA_size1.pth
schnet/models/final_model/majorvoting/: ._CV_setup1_neighbors_Gauss_big_kernel_setup1.pth  ._CV_setup2_Gauss_result.pth  ._CV_setup3_Gauss_result.pth  ._CV_setup4_Gauss_result.pth  ._CV_setup5_Gauss_result.pth
(+11 files in other folders)
